# dict_trans_tokenizer

./: README.md  lefthook.yml  pyproject.toml
example/: README.md  basic_usage.py
example/data/: mnc-en.json
src/dict_trans_tokenizer/: __init__.py  create_aligned_corpus.py  create_aligned_corpus_test.py  map_tokens.py  recurrent_alignment.py  recurrent_alignment_test.py  remap_model.py  train_bpe_tokenizer.py
src/dict_trans_tokenizer/types/: alignment_mode.py  bilingual_dict.py
src/dict_trans_tokenizer/utils/: load_bilingual_dict.py  logging_config.py  set_seed.py
