[project]
name = "dict-trans-tokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sj", email = "64534668+sj-h4@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
